# portfolio.rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix  index.html
.github/workflows/: build.yml  gh-pages.yml  lint-pr.yml  linter.yml  nix-build.yml
posts/: test.md
public/: repos.json  styles.css
src/: app.rs  fileserve.rs  lib.rs  main.rs
src/api/: posts.rs
src/components/: github_projects.rs  mod.rs  navbar.rs  projects.rs
src/pages/: blog.rs  home.rs  mod.rs  not_found.rs  post.rs  projects.rs  work.rs
