[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"
authors = ["asamonik"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.7", features = ["csr"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
gloo-net = "0.6"
serde = "1.0"
serde_json = "1.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
