[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

axum = { version = "0.7.9", features = ["ws", "multipart"], optional = true }
rand = { version = "0.8.5", optional =true }


leptos = { version = "0.7.0", default-features = false, features = ["nightly"] }
leptos_axum = { version = "0.7.0", optional = true }
leptos_meta = { version = "0.7.0", default-features = false }
leptos_router = { version = "0.7.0", default-features = false }

log = "0.4"
cfg-if = "1.0"

simple_logger = "5"
tokio = { version = "1.36.0", features = ["time", "sync", "macros"] }
tower = { version = "0.5.1", optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }

wasm-bindgen = { version = "=0.2.99", optional = true }
console_log = { version = "1", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

thiserror = "1.0.57"
tracing = { version = "0.1.40", optional = true }
http = "1.1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio-stream = "0.1.14"
phosphor-leptos = "0.7.0"
web-sys = { version = "0.3.60", features = ["Window", "Location", "Screen", "Document", "Element", "HtmlTextAreaElement", "CssStyleDeclaration"] }
anyhow = "1.0.80"
gray_matter = "0.2.6"
pulldown-cmark = "0.12"
chrono = { version = "0.4.24", features = ["serde"] }
gloo-net = "0.6"
serde_yaml = "0.8"
walkdir = "2.3"

[features]
hydrate = ["leptos/hydrate" ]
ssr = [
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:tracing",
]

[package.metadata.cargo-all-features]
denylist = ["axum", "tokio", "tower", "tower-http", "leptos_axum"]
skip_feature_sets = [["ssr", "hydrate"]]

[package.metadata.leptos]
output-name = "portfolio"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "public/styles.css"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
watch = false
env = "DEV"

bin-features = ["ssr"]
bin-default-features = false
#lib-features = ["csr"]
lib-features = ["hydrate"]
lib-default-features = false
